<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/setting_icon"
            android:layout_alignParentRight="true"
            android:layout_width="56dp"
            android:id="@+id/img_setting"
            android:layout_height="56dp" />
    </RelativeLayout>

    <LinearLayout
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/language"
            android:textSize="23dp"
            android:layout_margin="10dp"
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:singleLine="true"
                android:hint="@string/input_username"
                android:id="@+id/et_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
            <EditText
                android:singleLine="true"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:hint="@string/input_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_register"
                android:text="@string/register_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="30dp"
                android:text="@string/get_back"
                android:id="@+id/tv_get_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>




</LinearLayout>
